--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>fruta e fruto</title>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="src/estilo.css">
+  <link rel="stylesheet" type="text/css" href="_css/estilo.css">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="#">início<span class="sr-only">(current)</span></a>
@@ -35,33 +36,59 @@
     </div>
   </nav>
 
-  <h1>Reaproveite melhor os alimentos!</h1>
-  <h1>Economize e ganhe em saúde!</h1>
+  <div id="carouselExampleCaptions" class="carousel slide" data-interval="3000" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="_imagens/carrossel-img1.jpg" class="d-block w-100 imagem-carrossel-um" alt="...">
+        <div class="carousel-caption d-none d-md-block h-50">
+          <h1 class="fonte-titulo display-4">Reaproveite melhor os alimentos!</h1>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="_imagens/carrossel-img2.jpg" class="d-block w-100 imagem-carrossel-dois" alt="...">
+        <div class="carousel-caption d-none d-md-block h-50">
+          <h1 class="fonte-titulo display-4">Economize e ganhe em saúde!</h1>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
-  <h2>Receitas para economizar e ganhar saúde</h2>
-  <h2>Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</h2>
+  <h1 class="text-center fonte-titulo">Receitas para economizar e ganhar saúde</h1>
+  <p class="text-center">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
 
-  <img src="src/img/receita-abacate.jpg" alt="tigela com salada de abacate, vista superior">
+  <img src="_imagens/receita-abacate.jpg" alt="tigela com salada de abacate, vista superior">
   <h3>Tigela de abacate</h3>
   <p>Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
 
-  <img src="src/img/receita-kiwi.jpg" alt="tigela de mingau com kiwi, vista superior">
+  <img src="_imagens/receita-kiwi.jpg" alt="tigela de mingau com kiwi, vista superior">
   <h3>Salada de kiwi</h3>
   <p>Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
 
-  <img src="src/img/receita-mix.jpg" alt="prato com mix de vegetais e mão de pessoa adicionando azeite, vista superior">
+  <img src="_imagens/receita-mix.jpg" alt="prato com mix de vegetais e mão de pessoa adicionando azeite, vista superior">
   <h3>Mix de vegetais</h3>
   <p>Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
 
-  <img src="src/img/receita-pimentoes.jpg" alt="prato de salada de pimentões com alguns ingredientes ao lado, vista superior">
+  <img src="_imagens/receita-pimentoes.jpg" alt="prato de salada de pimentões com alguns ingredientes ao lado, vista superior">
   <h3>Pimentões à Juliana</h3>
   <p>Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
 
-  <img src="src/img/receita-oriental.jpg" alt="tigela com salada de vegetais estilo oriental, vista de cima">
+  <img src="_imagens/receita-oriental.jpg" alt="tigela com salada de vegetais estilo oriental, vista de cima">
   <h3>Prato oriental</h3>
   <p>Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
 
-  <img src="src/img/receita-beterrabas.jpg" alt="tigela com beterrabas e dentes de alho assados em primeiro plano, com ingredientes ao fundo">
+  <img src="_imagens/receita-beterrabas.jpg" alt="tigela com beterrabas e dentes de alho assados em primeiro plano, com ingredientes ao fundo">
   <h3>Beterrabas assadas</h3>
   <p>Receita refrescante e cheia de vitaminas para o seu café da manhã!
   </p>
