--- a/index.html
+++ b/index.html
@@ -13,85 +13,126 @@
 <body>
   <title>fruto & fruta</title>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">fruta & fruto</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">início<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">receitas</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">quem somos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" aria-disabled="true">contato</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <header id="cabecalho">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">fruta & fruto</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">início<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">receitas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">quem somos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" aria-disabled="true">contato</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-  <div id="carouselExampleCaptions" class="carousel slide" data-interval="3000" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="_imagens/carrossel-img1.jpg" class="d-block w-100 imagem-carrossel-um" alt="...">
-        <div class="carousel-caption d-none d-md-block h-50">
-          <h1 class="fonte-titulo display-4">Reaproveite melhor os alimentos!</h1>
+  <main>
+
+    <section id="carouselExampleIndicators" class="carousel slide" data-interval="3000" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="_imagens/carrossel-img1.jpg" class="d-block w-100 imagem-carrossel-um" alt="...">
+          <div class="carousel-caption d-none d-md-block h-50">
+            <h1 class="fonte-titulo display-4">Reaproveite melhor os alimentos!</h1>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="_imagens/carrossel-img2.jpg" class="d-block w-100 imagem-carrossel-dois" alt="...">
+          <div class="carousel-caption d-none d-md-block h-50">
+            <h1 class="fonte-titulo display-4">Economize e ganhe em saúde!</h1>
+          </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="_imagens/carrossel-img2.jpg" class="d-block w-100 imagem-carrossel-dois" alt="...">
-        <div class="carousel-caption d-none d-md-block h-50">
-          <h1 class="fonte-titulo display-4">Economize e ganhe em saúde!</h1>
-        </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </section>
+
+    <section id="titulo">
+      <h1 class="text-center fonte-titulo texto-cor-especial pt-5">Receitas para economizar e ganhar saúde</h1>
+      <p class="text-center text-secondary pb-5">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
+    </section>
+
+    <section id="receitas" class="container">
+      <div class="row">
+        <article class="card borda-cor-especial card-largura col-12 col-md-2">
+          <img src="_imagens/receita-abacate.jpg" class="card-img-top card-posicao-imagem" alt="tigela com salada de abacate, vista superior">
+          <div class="card-body">
+            <h5 class="card-title">Tigela de abacate</h5>
+            <p class="card-text">Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
+            <a href="#" class="btn botao-cor-especial">Veja a receita</a>
+          </div>
+        </article>
+ 
+        <article class="card borda-cor-especial card-largura col-12 col-md-2">
+          <img src="_imagens/receita-kiwi.jpg" class="card-img-top card-posicao-imagem" alt="tigela de mingau com kiwi, vista superior">
+          <div class="card-body">
+            <h5 class="card-title">Salada de kiwi</h5>
+            <p class="card-text">Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
+            <a href="#" class="btn botao-cor-especial">Veja a receita</a>
+          </div>
+        </article>
+
+        <article class="card borda-cor-especial card-largura col-12 col-md-2">
+          <img src="_imagens/receita-mix.jpg" class="card-img-top card-posicao-imagem" alt="prato com mix de vegetais e mão de pessoa adicionando azeite, vista superior">
+          <div class="card-body">
+            <h5 class="card-title">Mix de vegetais</h5>
+            <p class="card-text">Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
+            <a href="#" class="btn botao-cor-especial">Veja a receita</a>
+          </div>
+        </article>
+
+        <article class="card borda-cor-especial card-largura col-12 col-md-2">
+          <img src="_imagens/receita-pimentoes.jpg" class="card-img-top card-posicao-imagem" alt="prato de salada de pimentões com alguns ingredientes ao lado, vista superior">
+          <div class="card-body">
+            <h5 class="card-title">Pimentões à Juliana</h5>
+            <p class="card-text">Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
+            <a href="#" class="btn botao-cor-especial">Veja a receita</a>
+          </div>
+        </article>
+
+        <article class="card borda-cor-especial card-largura col-12 col-md-2">
+          <img src="_imagens/receita-oriental.jpg" class="card-img-top card-posicao-imagem" alt="tigela com salada de vegetais estilo oriental, vista de cima">
+          <div class="card-body">
+            <h5 class="card-title">Prato oriental</h5>
+            <p class="card-text">Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
+            <a href="#" class="btn botao-cor-especial">Veja a receita</a>
+          </div>
+        </article>
+
+        <article class="card borda-cor-especial card-largura col-12 col-md-2">
+          <img src="_imagens/receita-beterrabas.jpg" class="card-img-top card-posicao-imagem" alt="tigela com beterrabas e dentes de alho assados em primeiro plano, com ingredientes ao fundo">
+          <div class="card-body">
+            <h5 class="card-title">Beterrabas assadas</h5>
+            <p class="card-text">Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
+            <a href="#" class="btn botao-cor-especial">Veja a receita</a>
+          </div>
+        </article>
       </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+    </section>
 
-  <h1 class="text-center fonte-titulo">Receitas para economizar e ganhar saúde</h1>
-  <p class="text-center">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
-
-  <img src="_imagens/receita-abacate.jpg" alt="tigela com salada de abacate, vista superior">
-  <h3>Tigela de abacate</h3>
-  <p>Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
-
-  <img src="_imagens/receita-kiwi.jpg" alt="tigela de mingau com kiwi, vista superior">
-  <h3>Salada de kiwi</h3>
-  <p>Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
-
-  <img src="_imagens/receita-mix.jpg" alt="prato com mix de vegetais e mão de pessoa adicionando azeite, vista superior">
-  <h3>Mix de vegetais</h3>
-  <p>Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
-
-  <img src="_imagens/receita-pimentoes.jpg" alt="prato de salada de pimentões com alguns ingredientes ao lado, vista superior">
-  <h3>Pimentões à Juliana</h3>
-  <p>Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
-
-  <img src="_imagens/receita-oriental.jpg" alt="tigela com salada de vegetais estilo oriental, vista de cima">
-  <h3>Prato oriental</h3>
-  <p>Receita refrescante e cheia de vitaminas para o seu café da manhã!</p>
-
-  <img src="_imagens/receita-beterrabas.jpg" alt="tigela com beterrabas e dentes de alho assados em primeiro plano, com ingredientes ao fundo">
-  <h3>Beterrabas assadas</h3>
-  <p>Receita refrescante e cheia de vitaminas para o seu café da manhã!
-  </p>
+  </main>
 
   <p>contato:<a href="mailto:email@frutafruto.com.br">email@frutafruto.com.br</a></p>
 
