correção no footer

--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>fruta e fruto</title>
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="_css/estilo.css">
-</head>
+  <!-- Fonte importada do Google -->
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- Documento estilo.css -->
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css">
+  <!-- Plugin "Font Awesome" -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!-- Plugin "Social Buttons for Bootstrap" -->
+    <link rel="stylesheet" type="text/css" href="_css/bootstrap-social.css">
 
+</head>
 <body>
+
   <title>fruto & fruta</title>
 
+  <!-- Menu -->
   <header id="cabecalho">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">fruta & fruto</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <a class="navbar-brand fonte-titulo texto-cor-especial" href="#">fruta & fruto</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -31,7 +41,7 @@
             <a class="nav-link" href="#">quem somos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" aria-disabled="true">contato</a>
+            <a class="nav-link" data-toggle="modal" data-target="#modal-contato" href="#" aria-disabled="true">contato</a>
           </li>
         </ul>
       </div>
@@ -39,6 +49,7 @@
   </header>
 
   <main>
+    <!-- Carrossel -->
     <section id="carouselExampleIndicators" class="carousel slide" data-interval="3000" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -68,14 +79,16 @@
       </a>
     </section>
 
+    <!-- Texto -->
     <section id="titulo">
       <h1 class="text-center fonte-titulo texto-cor-especial pt-5">Receitas para economizar e ganhar saúde</h1>
       <p class="text-center text-secondary pb-5">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
     </section>
 
-    <section id="receitas" class="container">
-      <div class="row">
-        <article class="card borda-cor-especial card-largura col-12 col-md-2">
+    <!-- Cards -->
+    <section id="receitas" class="container-fluid bg-light">
+      <div class="row justify-content-center">
+        <article class="card borda-cor-especial card-largura col-12 col-md-4 p-0 m-4">
           <img src="_imagens/receita-abacate.jpg" class="card-img-top card-posicao-imagem" alt="tigela com salada de abacate, vista superior">
           <div class="card-body">
             <h5 class="card-title">Tigela de abacate</h5>
@@ -84,7 +97,7 @@
           </div>
         </article>
  
-        <article class="card borda-cor-especial card-largura col-12 col-md-2">
+        <article class="card borda-cor-especial card-largura col-12 col-md-4 p-0 m-4">
           <img src="_imagens/receita-kiwi.jpg" class="card-img-top card-posicao-imagem" alt="tigela de mingau com kiwi, vista superior">
           <div class="card-body">
             <h5 class="card-title">Salada de kiwi</h5>
@@ -93,7 +106,7 @@
           </div>
         </article>
 
-        <article class="card borda-cor-especial card-largura col-12 col-md-2">
+        <article class="card borda-cor-especial card-largura col-12 col-md-4 p-0 m-4">
           <img src="_imagens/receita-mix.jpg" class="card-img-top card-posicao-imagem" alt="prato com mix de vegetais e mão de pessoa adicionando azeite, vista superior">
           <div class="card-body">
             <h5 class="card-title">Mix de vegetais</h5>
@@ -101,8 +114,9 @@
             <a href="#" class="btn botao-cor-especial">Veja a receita</a>
           </div>
         </article>
-
-        <article class="card borda-cor-especial card-largura col-12 col-md-2">
+      </div>
+      <div class="row justify-content-center">
+        <article class="card borda-cor-especial card-largura col-12 col-md-4 p-0 m-4">
           <img src="_imagens/receita-pimentoes.jpg" class="card-img-top card-posicao-imagem" alt="prato de salada de pimentões com alguns ingredientes ao lado, vista superior">
           <div class="card-body">
             <h5 class="card-title">Pimentões à Juliana</h5>
@@ -111,7 +125,7 @@
           </div>
         </article>
 
-        <article class="card borda-cor-especial card-largura col-12 col-md-2">
+        <article class="card borda-cor-especial card-largura col-12 col-md-4 p-0 m-4">
           <img src="_imagens/receita-oriental.jpg" class="card-img-top card-posicao-imagem" alt="tigela com salada de vegetais estilo oriental, vista de cima">
           <div class="card-body">
             <h5 class="card-title">Prato oriental</h5>
@@ -120,7 +134,7 @@
           </div>
         </article>
 
-        <article class="card borda-cor-especial card-largura col-12 col-md-2">
+        <article class="card borda-cor-especial card-largura col-12 col-md-4 p-0 m-4">
           <img src="_imagens/receita-beterrabas.jpg" class="card-img-top card-posicao-imagem" alt="tigela com beterrabas e dentes de alho assados em primeiro plano, com ingredientes ao fundo">
           <div class="card-body">
             <h5 class="card-title">Beterrabas assadas</h5>
@@ -132,11 +146,59 @@
     </section>
   </main>
 
-  <p>contato:<a href="mailto:email@frutafruto.com.br">email@frutafruto.com.br</a></p>
+  <!-- Footer -->
+  <footer class="bg-secondary p-3">
+    <div class="row justify-content-center align-items-center">
+      <p class="text-light m-0 ">contato:</p>
+      &nbsp;
+      <a class="text-light" href="#">email@frutafruto.com.br</a>
+      &nbsp;&nbsp;
+      <h1><i class="fab fa-facebook-square cor-icone vertical-align"></i></h1>
+      &nbsp;&nbsp;
+      <h1><a href="#"><i class="fab fa-instagram cor-icone vertical-align"></i></a></h1>
+      &nbsp;&nbsp;
+      <h1><i class="fab fa-twitter-square cor-icone vertical-align"></i></h1>
+    </div>
+  </footer>
 
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
+  <!-- Modal -->
+    <div class="modal fade" id="modal-contato" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <dialog class="modal-content">
+          <header class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Entre em contato</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </header>
+          <main class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="formGroupExampleInput">Nome completo</label>
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Insira seu nome completo">
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlInput1">Endereço de e-mail</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlTextarea1">Deixe seu comentário</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Insira aqui seu comentário"></textarea>
+              </div>
+            </form>
+          </main>
+          <footer class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+            <button type="button" class="btn botao-cor-especial">Enviar</button>
+          </footer>
+        </dialog>
+      </div>
+    </div>
 </body>
+
+  <!-- Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
 </html>
