alteração no footer e inserção da área 'quem somos'

--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 
     <!-- Texto -->
     <section id="titulo">
-      <h1 class="text-center fonte-titulo texto-cor-especial pt-5">Receitas para economizar e ganhar saúde</h1>
-      <p class="text-center text-secondary pb-5">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
+      <h1 class="text-center fonte-titulo texto-cor-especial pt-5 mt-5">Receitas para economizar e ganhar saúde</h1>
+      <p class="text-center text-secondary pb-5 mb-5">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
     </section>
 
     <!-- Cards -->
-    <section id="receitas" class="container-fluid bg-light">
+    <section id="receitas" class="container-fluid bg-light mb-5 pb-5">
       <div class="row justify-content-center">
         <article class="card borda-cor-especial card-largura col-12 col-md-4 p-0 m-4">
           <img src="_imagens/receita-abacate.jpg" class="card-img-top card-posicao-imagem" alt="tigela com salada de abacate, vista superior">
@@ -146,18 +146,53 @@
     </section>
   </main>
 
+  <!-- Texto -->
+  <section id="titulo">
+    <h1 class="text-center fonte-titulo texto-cor-especial p-0 mt-4">Quem somos</h1>
+    <p class="text-center text-secondary pb-0 mb-0">Conheça a comunidade por trás da iniciativa</p>
+  </section>
+  
+  <!-- Quem somos -->
+  <section id="receitas" class="container-fluid bg-light">
+    <div class="row justify-content-center">
+      <article class="card mb-3 card-largura border-0 p-5 m-4 col-12 col-md-4">
+        <img src="_imagens/quemsomos-roberta.jpg" class="rounded-circle card-img-top imagem-quemsomos1 mb-0 img-thumbnail borda-cor-especial" alt="..." height="200px;">
+        <div class="card-body mt-0 pt-0">
+          <h5 class="card-title text-center fonte-titulo texto-cor-especial pt-5 h2">Roberta</h5>
+          <p class="card-text text-center text-secondary">conteúdo</p>
+        </div>
+      </article>
+      <article class="card mb-3 card-largura border-0 p-5 m-4 col-12 col-md-4">
+        <img src="_imagens/quemsomos-marcela.jpg" class="rounded-circle card-img-top imagem-quemsomos2 mb-0 img-thumbnail borda-cor-especial" alt="..." height="200px;">
+        <div class="card-body mt-0 pt-0">
+          <h5 class="card-title text-center fonte-titulo texto-cor-especial pt-5 h2">Marcela</h5>
+          <p class="card-text text-center text-secondary">chef de cozinha</p>
+        </div>
+      </article>
+      <article class="card mb-3 card-largura border-0 p-5 m-4 col-12 col-md-4">
+        <img src="_imagens/quemsomos-andreia.jpg" class="rounded-circle card-img-top imagem-quemsomos3 mb-0 img-thumbnail borda-cor-especial" alt="..." height="200px;">
+        <div class="card-body mt-0 pt-0">
+          <h5 class="card-title text-center fonte-titulo texto-cor-especial pt-5 h2">Andréia</h5>
+          <p class="card-text text-center text-secondary">pequena produtora</p>
+        </div>
+      </article>
+    </div>
+  </section>
+
+  
   <!-- Footer -->
-  <footer class="bg-secondary p-3">
-    <div class="row justify-content-center align-items-center">
-      <p class="text-light m-0 ">contato:</p>
-      &nbsp;
-      <a class="text-light" href="#">email@frutafruto.com.br</a>
-      &nbsp;&nbsp;
-      <h1><i class="fab fa-facebook-square cor-icone vertical-align"></i></h1>
-      &nbsp;&nbsp;
-      <h1><a href="#"><i class="fab fa-instagram cor-icone vertical-align"></i></a></h1>
-      &nbsp;&nbsp;
-      <h1><i class="fab fa-twitter-square cor-icone vertical-align"></i></h1>
+  <footer class="bg-secondary p-2 mt-0">
+    <div class="container" id="teste">
+      <div class="row">
+        <div class="col-lg-12 col-sm-12">
+          <p class="text-light m-0 text-center pt-1">contato: <a class="text-light" href="#">email@teste.com.br</a></p>
+          <h3 class="text-center">
+            <a href="#"><i class="fab fa-facebook-square cor-icone"></i></a>
+            <a href="#"><i class="fab fa-instagram cor-icone"></i></a>
+            <a href="#"><i class="fab fa-twitter-square cor-icone"></i></a>
+          </h3>
+        </div>
+      </div>
     </div>
   </footer>
 
