--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <a class="nav-link" href="#">início<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">receitas</a>
+            <a class="nav-link" href="#receitas">receitas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">quem somos</a>
+            <a class="nav-link" href="#quem-somos">quem somos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-toggle="modal" data-target="#modal-contato" href="#" aria-disabled="true">contato</a>
@@ -153,7 +153,7 @@
   </section>
   
   <!-- Quem somos -->
-  <section id="receitas" class="container-fluid bg-light">
+  <section id="quem-somos" class="container-fluid bg-light">
     <div class="row justify-content-center">
       <article class="card mb-3 card-largura border-0 p-5 m-4 col-12 col-md-4">
         <img src="_imagens/quemsomos-roberta.jpg" class="rounded-circle card-img-top imagem-quemsomos1 mb-0 img-thumbnail borda-cor-especial" alt="..." height="200px;">
